<resources>
    <string name="app_name">Sync O\' Task</string>

    <!--Activity Login Strings-->
    <string name="login_lblLogin">LOGIN</string>
    <string name="login_lblMessage">Please Sign In to continue</string>
    <string name="login_hintUser">User</string>
    <string name="login_hintPassword">Password</string>
    <string name="login_lblRemember">Remember me</string>
    <string name="login_lblForgot">Forgot Password?</string>
    <string name="login_btnLogin">Sign In</string>
    <string name="login_lblVersion">Version 1.0.0</string>

    <!--Activity Dashboard Strings-->
    <string name="dashboard_tasksProcess">Tasks in process</string>
    <string name="dashboard_yourTasks">Your Tasks</string>
    <string name="dashboard_maxPriority">Maximum Priority</string>
    <string name="dashboard_highPriority">High Priority</string>
    <string name="dashboard_mediumPriority">Medium Priority</string>
    <string name="dashboard_lowPriority">Low Priority</string>
    <string name="dashboard_myTasks">My Tasks</string>
    <string name="dashboard_myNotes">My Notes</string>
    <string name="dashboard_pomodoro">Pomodoro</string>
    <string name="dashboard_calculator">Calculadora</string>

    <!--Activity Create Task Strings-->
    <string name="createTask_lblCreateTask">CREATE NEW TASK</string>
    <string name="createTask_lblTitle">Title</string>
    <string name="createTask_lblDate">Date</string>
    <string name="createTask_lblStartTime">Start Time</string>
    <string name="createTask_lblEndTime">End Time</string>
    <string name="createTask_lblDescription">Description</string>
    <string name="createTask_textDescription">Task description</string>
    <string name="createTask_lblSubTasks">Sub-Tasks</string>
    <string name="createTask_lblNewTasks">A New Sub-Task</string>
    <string name="createTask_lblTags">Tags</string>
    <string name="createTask_lblPriority">Priority</string>
    <string name="createTask_lblMaxPriority">Max</string>
    <string name="createTask_lblHighPriority">High</string>
    <string name="createTask_lblMediumPriority">Medium</string>
    <string name="createTask_lblLowPriority">Low</string>
    <string name="createTask_dialog_create_tag">Submit</string>
    <string name="createTask_dialog_cancel_tag">Cancel</string>
    <string name="createTask_dialog_lblCreate_tag">Create Tag</string>
    <string name="createTask_btnCreate_Task">Create Task</string>
    <string name="createTask_dialog_name_tag">Tag name</string>

    <!--Activity List Of Tasks Strings-->
    <string name="listTasks_lblMyTasks">My Tasks</string>
    <string name="listTasks_lblOverdue">Overdue</string>
    <string name="listTasks_lblToDo">To Do</string>
    <string name="listTasks_lblOpen">Open</string>
    <string name="listTasks_lblAllTasks">All Tasks</string>
    <string name="listTasks_lblOverdueTasks">Overdue</string>
    <string name="listTasks_lblToDoTasks">To Do</string>
    <string name="listTasks_lblOpenTasks">Open</string>
    <string name="listTasks_lblDueToday">Due Today</string>
    <string name="listTasks_lblSortBy">Sort By</string>

    <!--Activity Edit Task Strings-->
    <string name="editTask_lblCreateTask">EDIT TASK</string>
    <string name="editTask_lblTitle">Title</string>
    <string name="editTask_lblDate">Date</string>
    <string name="editTask_lblStartTime">Start Time</string>
    <string name="editTask_lblEndTime">End Time</string>
    <string name="editTask_lblDescription">Description</string>
    <string name="editTask_lblSubTasks">Sub-Tasks</string>
    <string name="editTask_hintSUbTask">Sub-Task name</string>
    <string name="editTask_lblTags">Tags</string>
    <string name="editTask_lblPriority">Priority</string>
    <string name="editTask_lblMaxPriority">Max</string>
    <string name="editTask_lblHighPriority">High</string>
    <string name="editTask_lblMediumPriority">Med</string>
    <string name="editTask_lblLowPriority">Low</string>
    <string name="editTask_btnEditTask">Edit</string>
    <string name="editTask_btnDeleteTask">Delete</string>

    <!--Activity Edit Note Strings-->
    <string name="editTask_lblEditNote">EDIT NOTE</string>
    <string name="editTask_btnDeleteNote">Delete Note</string>
    <string name="editTask_btnEditNote">Edit Note</string>
    <string name="editTask_btnEditImage">Edit Image</string>

    <!-- Fb Login -->
    <string name="facebook_app_id">494992399534817</string>
    <string name="fb_login_protocol_scheme">fb494992399534817</string>
    <string name="facebook_client_token">c7151de8e6621621831b5242131ab548</string>

</resources>