<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_createTask">

  <androidx.constraintlayout.widget.ConstraintLayout
      android:id="@+id/layout_banner"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

    <ImageView
        android:id="@+id/img_banner"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:scaleType="fitXY"
        android:src="@drawable/banner_createtask"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical"
        android:paddingTop="20dp"
        android:paddingBottom="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/img_banner">

      <androidx.constraintlayout.widget.ConstraintLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:layout_weight="1.5">

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:src="@drawable/left_white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/editTask_lblCreateTask"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
      </androidx.constraintlayout.widget.ConstraintLayout>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:layout_marginTop="20dp"
          android:layout_weight="1"
          android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/editTask_lblTitle"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/text_input_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:textColor="@color/white"
            android:textSize="15dp" />
      </LinearLayout>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:layout_marginTop="15dp"
          android:layout_weight="1"
          android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/editTask_lblDate"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/text_input_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:textColor="@color/white"
            android:textSize="15dp" />
      </LinearLayout>
    </LinearLayout>
  </androidx.constraintlayout.widget.ConstraintLayout>

  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_marginStart="20dp"
      android:layout_marginEnd="20dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/layout_banner">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/layout_createTask"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_marginRight="15dp"
              android:layout_weight="1"
              android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/editTask_lblStartTime"
                android:textAlignment="textStart"
                android:textColor="@color/dark_blue"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="time"
                android:textSize="15sp"
                android:theme="@style/EditTime.createTask.SyncOTask" />
          </LinearLayout>

          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_marginLeft="15dp"
              android:layout_weight="1"
              android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/editTask_lblStartTime"
                android:textAlignment="textStart"
                android:textColor="@color/dark_blue"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="time"
                android:textSize="15sp"
                android:theme="@style/EditTime.createTask.SyncOTask" />
          </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

          <TextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/editTask_lblDescription"
              android:textColor="@color/dark_blue"
              android:textSize="20sp"
              android:textStyle="bold" />

          <MultiAutoCompleteTextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="Terminar la UI del proyecto de Desarrollo mobil, cumpliendo con los requisitos especificados en el PDF y teniendola lista a mas tardar antes de 10 de noviembre para empezar el Back. "
              android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

          <TextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/editTask_lblSubTasks"
              android:textColor="@color/dark_blue"
              android:textSize="20sp"
              android:textStyle="bold" />

          <EditText
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:inputType="text"
              android:text="Hacer diseño en Figma"
              android:textSize="15sp" />

          <EditText
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:inputType="text"
              android:hint="@string/editTask_hintSUbTask"
              android:textColor="@color/light_gray"
              android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

          <TextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/editTask_lblTags"
              android:textColor="@color/dark_blue"
              android:textSize="20sp"
              android:textStyle="bold" />

          <ScrollView
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_marginTop="10dp">

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

              <LinearLayout
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:paddingRight="15dp"
                    android:paddingLeft="15dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:background="@drawable/bc_tags"
                    android:text="CETI" />


                <TextView
                    android:id="@+id/btnAddTag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="15dp"
                    android:paddingLeft="15dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:background="@drawable/bc_add_tags" />

              </LinearLayout>

            </HorizontalScrollView>

          </ScrollView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

          <TextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/editTask_lblPriority"
              android:textColor="@color/dark_blue"
              android:textSize="20sp"
              android:textStyle="bold" />

          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_marginTop="10dp"
              android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/bc_btnpriority"
                android:backgroundTint="@color/light_green"
                android:orientation="horizontal">

              <ImageView
                  android:layout_width="0dp"
                  android:layout_height="match_parent"
                  android:layout_marginLeft="5dp"
                  android:layout_marginRight="5dp"
                  android:layout_weight="1"
                  android:paddingTop="7dp"
                  android:paddingBottom="7dp"
                  android:scaleType="centerInside"
                  android:src="@drawable/low" />

              <TextView
                  android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_weight="2"
                  android:paddingTop="10dp"
                  android:paddingBottom="10dp"
                  android:text="@string/editTask_lblLowPriority"
                  android:textColor="@color/white"
                  android:textSize="12dp"
                  android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:backgroundTint="@color/yellow"
                android:background="@drawable/bc_btnpriority"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:orientation="horizontal">

              <ImageView
                  android:layout_width="0dp"
                  android:layout_height="match_parent"
                  android:layout_marginLeft="5dp"
                  android:layout_marginRight="5dp"
                  android:layout_weight="1"
                  android:paddingTop="7dp"
                  android:paddingBottom="7dp"
                  android:scaleType="centerInside"
                  android:src="@drawable/medium" />

              <TextView
                  android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_weight="2"
                  android:paddingTop="10dp"
                  android:paddingBottom="10dp"
                  android:text="@string/editTask_lblMediumPriority"
                  android:textColor="@color/white"
                  android:textSize="12dp"
                  android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/bc_btnpriority"
                android:backgroundTint="@color/light_red"
                android:orientation="horizontal">

              <ImageView
                  android:layout_width="0dp"
                  android:layout_height="match_parent"
                  android:layout_marginLeft="5dp"
                  android:layout_marginRight="5dp"
                  android:layout_weight="1"
                  android:paddingTop="7dp"
                  android:paddingBottom="7dp"
                  android:scaleType="centerInside"
                  android:src="@drawable/high" />

              <TextView
                  android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_weight="2"
                  android:paddingTop="10dp"
                  android:paddingBottom="10dp"
                  android:text="@string/editTask_lblHighPriority"
                  android:textColor="@color/white"
                  android:textSize="12dp"
                  android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/bc_btnpriority"
                android:backgroundTint="@color/light_purple"
                android:orientation="horizontal">

              <ImageView
                  android:layout_width="0dp"
                  android:layout_height="match_parent"
                  android:layout_marginLeft="5dp"
                  android:layout_marginRight="5dp"
                  android:layout_weight="1"
                  android:paddingTop="7dp"
                  android:paddingBottom="7dp"
                  android:scaleType="centerInside"
                  android:src="@drawable/max" />

              <TextView
                  android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_weight="2"
                  android:paddingTop="10dp"
                  android:paddingBottom="10dp"
                  android:text="@string/editTask_lblMaxPriority"
                  android:textColor="@color/white"
                  android:textSize="12dp"
                  android:textStyle="bold" />
            </LinearLayout>
          </LinearLayout>

        </LinearLayout>


      </LinearLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_createTask"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

      <Button
          android:id="@+id/btnEditTask"
          android:layout_width="150dp"
          android:layout_height="50dp"
          android:text="@string/editTask_btnEditTask"
          android:textSize="20sp"
          android:theme="@style/Buttons.SyncOTask"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toStartOf="@+id/btnDeleteTask"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

      <Button
          android:id="@+id/btnDeleteTask"
          android:layout_width="150dp"
          android:layout_height="50dp"
          android:text="@string/editTask_btnDeleteTask"
          android:textSize="20sp"
          android:theme="@style/Buttons.SyncOTask"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toEndOf="@+id/btnEditTask"
          app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

  </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>